log
Sat Apr 23 11:52:07 HSP 2022: 
 treemap.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
560e132
Sat Apr 23 11:58:13 HSP 2022: 
 tests:  13|5
total_score: 25/70
6aa7907
